--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@antv/x6": "^1.34.6",
+    "less": "^4.1.3",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
     "vue-router": "^4.1.5"
