--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@antv/x6": "^1.34.6",
+    "@antv/x6-vue-shape": "^1.5.3",
     "less": "^4.1.3",
     "pinia": "^2.0.23",
     "vue": "^3.2.41",
